--- a/app/src/main/res/layout/custom_toast1.xml
+++ b/app/src/main/res/layout/custom_toast1.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/ll_toast"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:orientation="vertical"
-  android:background="@drawable/shape"
   android:padding="9dp">
 
   <TextView
@@ -12,5 +12,5 @@
     android:layout_height="wrap_content"
     android:text="Hello I AM Toast1."
     android:textColor="#fafafa"
-    android:textSize="16sp"/>
+    android:textSize="16sp" />
 </LinearLayout>
